added CSS to project

--- a/index.html
+++ b/index.html
@@ -59,17 +59,21 @@
             git checkout -b branch-name: creates a new branch and switches to it
           </li>
           <li>
-            git branch tells you the branch you are currently on and shows other
-            branches available
+            git branch: tells you the branch you are currently on and shows
+            other branches available
           </li>
           <li>
-            git reflog will list everythig done in git across all of your
+            git reflog: will list everythig done in git across all of your
             branches
           </li>
-          <li>git add -A command to stage all files in the working branch</li>
+          <li>git add -A: to stage all files in the working branch</li>
           <li>
-            git commit -m "-m is adding a message" will commit the previously
-            staged files
+            git commit -m "-m is message": will commit the previously staged
+            files
+          </li>
+          <li>
+            git pull origin main: will make sure the current branch is up to
+            date before making a pull request
           </li>
         </ul>
       </section>
