added CSS to project

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
             git pull origin main: will make sure the current branch is up to
             date before making a pull request
           </li>
+          <li>
+            git push origin 'branch name': pushes up the changes from the branch
+          </li>
         </ul>
       </section>
       <section class="card" id="javascript-section">
