--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
         <h2>JavaScript</h2>
         <ul>
           <li>
+            A variable is a named container that allows us to store data in our
+            code.
+          </li>
+          <li>
+            Control flow is the order in which a computer executes code in a
+            script.
+          </li>
+          <li>
             console.log: Allows you to print out to the 'console' can be viewed
             by inspecting the page in your browser.
           </li>
